homepage/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: misc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: homepage
    spec:
      containers:
      - image: ghcr.io/gethomepage/homepage:v1
        name: homepage
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
          name: web
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /config
      restartPolicy: Always
      volumes:
      - name: config
        configMap:
          name: homepage-config
