homepage/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: misc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: homepage
    spec:
      serviceAccountName: homepage
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
      - image: ghcr.io/gethomepage/homepage:v1
        name: homepage
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
          name: web
          protocol: TCP
        lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "cp -r -L /tmp/config/* /app/config/"]
        volumeMounts:
        - name: config
          mountPath: /app/config
        - name: tmp-config
          mountPath: /tmp/config
      restartPolicy: Always
      volumes:
      - name: config
        emptyDir: {}
      - name: tmp-config
        configMap:
          name: homepage-config
