homepage/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage-service
  namespace: misc
spec:
  type: ClusterIP
  selector:
    app: homepage
  ports:
  - name: web
    protocol: TCP
    port: 3000
    targetPort: 3000
